create github pages

--- a/photos.html
+++ b/photos.html
@@ -50,7 +50,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">how to create a website</a></section><section class="cid-qXSdavxGTf mbr-fullscreen mbr-parallax-background" id="header15-e">
+<section class="engine"><a href="https://mobiri.se/r">free bootstrap templates</a></section><section class="cid-qXSdavxGTf mbr-fullscreen mbr-parallax-background" id="header15-e">
 
     
 
@@ -67,7 +67,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Спасибо за заполнение анкеты!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="K4Er+tQDOdq7hJwKLhlF6+3haNKZdka85o4yme14LE3mwzdTCaDEtGxWZ4RKHsrg+nqr4G68bXZtuUlkbG4RU9as0VHQurCUnDzuiqmWCOd0dqrLGOHSrbL1FrYKdk8b" data-form-field="Email">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vkyhiQ0onLY/ozwDcWvPc0QZudWV+vBLkKitz0wQCGZBbv75dYntYYDPax/Oq13zH/d5jc/mjiy3BHm9pFnX0HcDYMxIHnM6BH83wATW+AJnvIpY6aYAFQeJ9kPtb5bD" data-form-field="Email">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-e">
@@ -217,7 +217,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="k0kb87RdxN3OaVz1rTOFyPdDkBYFymzsfQDForFysmRpQCsvtkuIz/1Q0tnJxYQny0cJwlOyxeiN6hlhCNqGrW1UdRWLA+AFjkVMJLvdx6LauGsYuzp2W1eJuRW3RVIh" data-form-email="true">
+                        <input type="hidden" value="AxuOvH1Y63o4EHtr95131WD+P3ZKPHrLsSP/PQoUlJz1AJQAMsvlXi3cyK94AtyTjxEW2MH9OiX1y0nb2+VDjiAA3UlaY649T8syW49Wcwonn9dUMY59CTjsdns/uQ7m" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer4-g">
                         </div>
